# providers/alicloud/catalog/source/openapi.json
@@ -870,6 +870,72 @@
         "x-operation-call": {"product":"Ons","version":"2019-02-14","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"ons.{region}.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
       }
     },
+    "/ons/instances/{InstanceId}/topics": {
+      "get": {
+        "operationId": "ONS.OnsTopicList",
+        "x-operation-name": "OnsTopicList",
+        "x-operation-call": {"product":"Ons","version":"2019-02-14","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"ons.{region}.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
+      }
+    },
+    "/ons/instances/{InstanceId}/topics/{Topic}": {
+      "delete": {
+        "operationId": "ONS.OnsTopicDelete",
+        "x-operation-name": "OnsTopicDelete",
+        "x-operation-call": {"product":"Ons","version":"2019-02-14","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"ons.{region}.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
+      }
+    },
+    "/ons/instances/{InstanceId}/groups": {
+      "get": {
+        "operationId": "ONS.OnsGroupList",
+        "x-operation-name": "OnsGroupList",
+        "x-operation-call": {"product":"Ons","version":"2019-02-14","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"ons.{region}.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
+      }
+    },
+    "/ons/instances/{InstanceId}/groups/{GroupId}": {
+      "delete": {
+        "operationId": "ONS.OnsGroupDelete",
+        "x-operation-name": "OnsGroupDelete",
+        "x-operation-call": {"product":"Ons","version":"2019-02-14","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"ons.{region}.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
+      }
+    },
+    "/rocketmq/instances/{instanceId}/topics": {
+      "get": {
+        "operationId": "RocketMQ.ListTopics",
+        "x-operation-name": "ListTopics",
+        "x-operation-call": {"product":"RocketMQ","version":"2022-08-01","style":"ROA","protocol":"HTTPS","method":"GET","path":"/instances/{instanceId}/topics","endpoint":"rocketmq.{region}.aliyuncs.com","request_body_type":"json","body_type":"json","parameter_position":"query"}
+      }
+    },
+    "/rocketmq/instances/{instanceId}/topics/{topicName}": {
+      "get": {
+        "operationId": "RocketMQ.GetTopic",
+        "x-operation-name": "GetTopic",
+        "x-operation-call": {"product":"RocketMQ","version":"2022-08-01","style":"ROA","protocol":"HTTPS","method":"GET","path":"/instances/{instanceId}/topics/{topicName}","endpoint":"rocketmq.{region}.aliyuncs.com","request_body_type":"json","body_type":"json","parameter_position":"query"}
+      },
+      "delete": {
+        "operationId": "RocketMQ.DeleteTopic",
+        "x-operation-name": "DeleteTopic",
+        "x-operation-call": {"product":"RocketMQ","version":"2022-08-01","style":"ROA","protocol":"HTTPS","method":"DELETE","path":"/instances/{instanceId}/topics/{topicName}","endpoint":"rocketmq.{region}.aliyuncs.com","request_body_type":"json","body_type":"json","parameter_position":"query"}
+      }
+    },
+    "/rocketmq/instances/{instanceId}/consumer-groups": {
+      "get": {
+        "operationId": "RocketMQ.ListConsumerGroups",
+        "x-operation-name": "ListConsumerGroups",
+        "x-operation-call": {"product":"RocketMQ","version":"2022-08-01","style":"ROA","protocol":"HTTPS","method":"GET","path":"/instances/{instanceId}/consumerGroups","endpoint":"rocketmq.{region}.aliyuncs.com","request_body_type":"json","body_type":"json","parameter_position":"query"}
+      }
+    },
+    "/rocketmq/instances/{instanceId}/consumer-groups/{consumerGroupId}": {
+      "get": {
+        "operationId": "RocketMQ.GetConsumerGroup",
+        "x-operation-name": "GetConsumerGroup",
+        "x-operation-call": {"product":"RocketMQ","version":"2022-08-01","style":"ROA","protocol":"HTTPS","method":"GET","path":"/instances/{instanceId}/consumerGroups/{consumerGroupId}","endpoint":"rocketmq.{region}.aliyuncs.com","request_body_type":"json","body_type":"json","parameter_position":"query"}
+      },
+      "delete": {
+        "operationId": "RocketMQ.DeleteConsumerGroup",
+        "x-operation-name": "DeleteConsumerGroup",
+        "x-operation-call": {"product":"RocketMQ","version":"2022-08-01","style":"ROA","protocol":"HTTPS","method":"DELETE","path":"/instances/{instanceId}/consumerGroups/{consumerGroupId}","endpoint":"rocketmq.{region}.aliyuncs.com","request_body_type":"json","body_type":"json","parameter_position":"query"}
+      }
+    },
     "/rocketmq/instances": {
       "get": {
         "operationId": "RocketMQ.ListInstances",
@@ -2077,6 +2143,34 @@
           "body_type": "json",
           "parameter_position": "query"
         }
+      }
+    },
+    "/alikafka/instances/{InstanceId}/topics": {
+      "get": {
+        "operationId": "AliKafka.GetTopicList",
+        "x-operation-name": "GetTopicList",
+        "x-operation-call": {"product":"alikafka","version":"2019-09-16","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"alikafka.{region}.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
+      }
+    },
+    "/alikafka/instances/{InstanceId}/topics/{Topic}": {
+      "delete": {
+        "operationId": "AliKafka.DeleteTopic",
+        "x-operation-name": "DeleteTopic",
+        "x-operation-call": {"product":"alikafka","version":"2019-09-16","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"alikafka.{region}.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
+      }
+    },
+    "/alikafka/instances/{InstanceId}/consumer-groups": {
+      "get": {
+        "operationId": "AliKafka.GetConsumerList",
+        "x-operation-name": "GetConsumerList",
+        "x-operation-call": {"product":"alikafka","version":"2019-09-16","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"alikafka.{region}.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
+      }
+    },
+    "/alikafka/instances/{InstanceId}/consumer-groups/{ConsumerId}": {
+      "delete": {
+        "operationId": "AliKafka.DeleteConsumerGroup",
+        "x-operation-name": "DeleteConsumerGroup",
+        "x-operation-call": {"product":"alikafka","version":"2019-09-16","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"alikafka.{region}.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
       }
     },
     "/alikafka/instances": {
@@ -3732,6 +3826,8 @@
     {"nativeType": "ACS::ALB::Listener", "class": "network.load_balancer_listener", "displayName": "ALB Listener", "scopeKinds": ["region"]},
     {"nativeType": "ACS::ALB::LoadBalancer", "class": "network.load_balancer", "displayName": "Application Load Balancer", "scopeKinds": ["region"]},
     {"nativeType": "ACS::ALB::ServerGroup", "class": "network.target_group", "displayName": "ALB Server Group", "scopeKinds": ["region"]},
+    {"nativeType": "ACS::AliKafka::ConsumerGroup", "class": "messaging.consumer_group", "displayName": "Kafka Consumer Group", "scopeKinds": ["region"]},
+    {"nativeType": "ACS::AliKafka::Topic", "class": "messaging.topic", "displayName": "Kafka Topic", "scopeKinds": ["region"]},
     {"nativeType": "ACS::APIG::Gateway", "class": "network.api_gateway", "displayName": "Cloud-native API Gateway", "scopeKinds": ["region"]},
     {"nativeType": "ACS::ApiGateway::Instance", "class": "network.api_gateway", "displayName": "API Gateway Instance", "scopeKinds": ["region"]},
     {"nativeType": "ACS::BPStudio::Application", "class": "application.architecture", "displayName": "CADT Application", "scopeKinds": ["global"]},
@@ -3841,6 +3937,8 @@
     {"nativeType": "ACS::NLB::LoadBalancer", "class": "network.load_balancer", "displayName": "Network Load Balancer", "scopeKinds": ["region"]},
     {"nativeType": "ACS::NLB::ServerGroup", "class": "network.target_group", "displayName": "NLB Server Group", "scopeKinds": ["region"]},
     {"nativeType": "ACS::OceanBase::Instance", "class": "database.relational", "displayName": "OceanBase Instance", "scopeKinds": ["region"]},
+    {"nativeType": "ACS::Ons::Group", "class": "messaging.consumer_group", "displayName": "RocketMQ 4.0 Group", "scopeKinds": ["region"]},
+    {"nativeType": "ACS::Ons::Topic", "class": "messaging.topic", "displayName": "RocketMQ 4.0 Topic", "scopeKinds": ["region"]},
     {"nativeType": "ACS::OOS::Application", "class": "application", "displayName": "OOS Application", "scopeKinds": ["region"]},
     {"nativeType": "ACS::OSS::Bucket", "class": "storage.object_bucket", "displayName": "OSS Bucket", "scopeKinds": ["region"]},
     {"nativeType": "ACS::OpenSearch::AppGroup", "class": "search.application", "displayName": "OpenSearch Application", "scopeKinds": ["region"]},
@@ -3856,6 +3954,8 @@
     {"nativeType": "ACS::RAM::Policy", "class": "identity.policy", "displayName": "RAM Policy", "scopeKinds": ["global"]},
     {"nativeType": "ACS::RAM::Role", "class": "identity.role", "displayName": "RAM Role", "scopeKinds": ["global"]},
     {"nativeType": "ACS::RAM::User", "class": "identity.user", "displayName": "RAM User", "scopeKinds": ["global"]},
+    {"nativeType": "ACS::RocketMQ::ConsumerGroup", "class": "messaging.consumer_group", "displayName": "RocketMQ 5.0 Consumer Group", "scopeKinds": ["region"]},
+    {"nativeType": "ACS::RocketMQ::Topic", "class": "messaging.topic", "displayName": "RocketMQ 5.0 Topic", "scopeKinds": ["region"]},
     {"nativeType": "ACS::RTC::Application", "class": "media.rtc_application", "displayName": "RTC Application", "scopeKinds": ["global"]},
     {"nativeType": "ACS::RDS::DBInstance", "class": "database.relational", "displayName": "RDS Instance", "scopeKinds": ["region"]},
     {"nativeType": "ACS::ROS::Stack", "class": "orchestration.stack", "displayName": "ROS Stack", "scopeKinds": ["region"]},
